tests/AbstractTests/overflows_double.avm.expected
Return: 84
Error: [1;31mline 1:[1;33m Overflow or underflow on a value
